# UBI2-tests

./: CMakeLists.txt  INSTALL  libubiio.c  libubiio.h  libubiio_int.h  ubi.h
PPO-bits/: test.c
tests/: CMakeLists.txt  TODO  dump_infos.sh  test.c
